# IDJ-2018-01

./: .gitignore  Makefile  README.md
T1/: .gitignore  CMakeLists.txt  Makefile
T1/include/: Game.h  Music.h  SDL_include.h  Sprite.h  State.h
T1/src/: Game.cpp  Music.cpp  Sprite.cpp  State.cpp  main.cpp
T2/: CMakeLists.txt  Makefile
T2/include/: Alien.h  Being.h  Bullet.h  Camera.h  CameraFollower.h  Collider.h  Collision.h  Component.h  EndState.h  Face.h  Game.h  GameData.h  GameObject.h  InputManager.h  Minion.h  Music.h  PenguinBody.h  PenguinCannon.h  Rect.h  Resources.h  Sound.h  Sprite.h  StageState.h  State.h  Text.h  TileMap.h  TileSet.h  Timer.h  TitleState.h  Vec2.h
T2/src/: Alien.cpp  Being.cpp  Bullet.cpp  Camera.cpp  CameraFollower.cpp  Collider.cpp  Component.cpp  EndState.cpp  Face.cpp  Game.cpp  GameData.cpp  GameObject.cpp  InputManager.cpp  Minion.cpp  Music.cpp  PenguinBody.cpp  PenguinCannon.cpp  Rect.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  StageState.cpp  State.cpp  Text.cpp  TileMap.cpp  TileSet.cpp  Timer.cpp  TitleState.cpp  Vec2.cpp  main.cpp
